--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>sCorp.ian<h1>
+
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>sCorp:ian - security Corporation:intelligence aboard neurons<h1>
+  </body>
+</html>
+
+
