--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>sCorp:ian - security Corporation:intelligence aboard neurons<h1>
+     <a href="/learning/asm_tutorial.html">Assembly tutorial</a>   
   </body>
 </html>
 
