--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>sCorp:ian - security Corporation:intelligence aboard neurons<h1>
-     <a href="/asm_tutorial.html">Assembly tutorial</a>   
+     <a href="/scorpian/learning/asm_tutorial.html">Assembly tutorial</a>   
   </body>
 </html>
 
