--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>sCorp:ian - security Corporation:intelligence aboard neurons<h1>
      <a href="/scorpian/learning/asm_tutorial.html">Assembly tutorial</a>   
+     <a href="/scorpian/thesis/demo.html">Demo Thesis</a>
   </body>
 </html>
 
